--- a/api-getawey/package.json
+++ b/api-getawey/package.json
@@ -3,12 +3,14 @@
    "version": "1.0.0",
    "main": "index.js",
    "scripts": {
-      "dev": "tsx watch src/index.ts"
+      "dev": "tsx watch src/server.ts"
    },
    "author": "alejandro-dev",
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "@grpc/grpc-js": "^1.13.0",
+      "@grpc/proto-loader": "^0.7.13",
       "amqplib": "^0.10.5",
       "dotenv": "^16.4.7",
       "express": "^4.21.2"
