--- a/auth/package.json
+++ b/auth/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@grpc/grpc-js": "^1.13.0",
+    "@grpc/proto-loader": "^0.7.13",
     "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
