--- a/auth/package.json
+++ b/auth/package.json
@@ -16,8 +16,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
