--- a/auth/tsconfig.json
+++ b/auth/tsconfig.json
@@ -21,7 +21,8 @@
       "skipLibCheck": true
    },
    "include": [
-      "src/**/*"
+      "src/**/*",
+      "protos/**/*.proto"
    ],
    "exclude": [
       "node_modules/*",
