--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "zod": "^3.24.2"
   },
@@ -23,6 +24,7 @@
     "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
