--- a/api-getawey/package.json
+++ b/api-getawey/package.json
@@ -13,7 +13,8 @@
       "@grpc/proto-loader": "^0.7.13",
       "amqplib": "^0.10.5",
       "dotenv": "^16.4.7",
-      "express": "^4.21.2"
+      "express": "^4.21.2",
+      "express-validator": "^7.2.1"
    },
    "devDependencies": {
       "@types/amqplib": "^0.10.7",
