--- a/api-getawey/package.json
+++ b/api-getawey/package.json
@@ -14,7 +14,8 @@
       "amqplib": "^0.10.5",
       "dotenv": "^16.4.7",
       "express": "^4.21.2",
-      "express-validator": "^7.2.1"
+      "express-validator": "^7.2.1",
+      "uuid": "^11.1.0"
    },
    "devDependencies": {
       "@types/amqplib": "^0.10.7",
