--- a/notifications/package.json
+++ b/notifications/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "notifications",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,22 +9,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@grpc/grpc-js": "^1.13.0",
-    "@grpc/proto-loader": "^0.7.13",
     "amqplib": "^0.10.5",
-    "bcrypt": "^5.1.1",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "uuid": "^11.1.0"
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/express": "^5.0.1",
+    "@types/nodemailer": "^6.4.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
