--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
     volumes:
       - ./tasks:/app
       - '/app/node_modules'
+    depends_on:
+      - tasks-db
     networks:
       - app-network
 
