--- a/tasks/dockerfile
+++ b/tasks/dockerfile
@@ -18,4 +18,4 @@ EXPOSE 3004
 
 # Comando para ejecutar la aplicación
 # CMD ["npm", "run", "dev"]
-CMD ["sh", "-c", "npm run dev"]
+CMD ["sh", "-c", "npm uninstall --save-dev mysql2 pg && npm install mysql2 pg && npm run dev"]
